# slackapp-chatgpt

./: .env.template  .gitignore  README.md  add_document.py  app.py  package-lock.json  package.json  pyproject.toml  requirements.txt  serverless.yml
