[tool.poetry]
name = "slackapp-chatgpt"
version = "0.1.0"
description = ""
authors = ["yuichi.nasukawa <nasu0227@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10 <3.12"
slack-bolt = "^1.18.1"
python-dotenv = "^1.0.0"
langchain = ">=0.1.0"
openai = "^1.4.0"
momento = "^1.16.0"
boto3 = "^1.34.5"
pinecone-client = "<3.0.0"
tiktoken = "^0.5.2"
langchain-community = "^0.0.16"
langchain-openai = "^0.0.5"


[tool.poetry.group.dev.dependencies]
unstructured = "^0.12.2"
pdf2image = "^1.17.0"
pdfminer-six = "^20231228"
opencv-python = "^4.9.0.80"
unstructured-inference = "^0.7.23"
pikepdf = "^8.11.2"
pypdf = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
